--- a/seesea-gateway-sit.yml
+++ b/seesea-gateway-sit.yml
@@ -27,3 +27,13 @@ spring:
     # 通过connectProperties属性来打开mergeSql功能；慢SQL记录
     connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
     #useGlobalDataSourceStat=true # 合并多个DruidDataSource的监控数据
+jasypt:
+  encryptor:
+    password: EbfYkitulv73I2p0mXI50JMXoaxZTKJ7
+mybatis:
+  type-aliases-package: com.seesea.gateway.entity.po
+  mapper-locations: classpath:mybatis/*.xml
+mapper:
+  mappers: com.seesea.gateway.BaseMapper
+  not-empty: false
+  identity: MYSQL
