--- a/seesea-gateway-local.yml
+++ b/seesea-gateway-local.yml
@@ -43,3 +43,9 @@ management:
   endpoint:
     bus-refresh:
       enabled: true
+eureka:
+  client:
+    service-url:
+      defaultZone: http://192.168.1.108:8000/eureka/
+  instance:
+    prefer-ip-address: true
