--- a/seesea-gateway-sit.yml
+++ b/seesea-gateway-sit.yml
@@ -43,3 +43,12 @@ management:
   endpoint:
     bus-refresh:
       enabled: true
+
+zuul:
+  routes:
+    gateway:
+      path: /gateway/**
+      serviceId: seesea-gateway
+  host:
+    connect-timeout-millis: 30000
+    socket-timeout-millis: 30000
